# lazytry

./: Cargo.toml  README.md
src/: error.rs  lib.rs  sync.rs  unsync.rs
