[package]
name = "lazytry"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Providing failable lazy values"
repository = "https://github.com/snylonue/lazytry"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.13.0"
